# autoru_web_catalog

./: .env  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
autoru_catalog/: Dockerfile
autoru_catalog/catalog/: forms.py  models.py  parser.py  views.py
autoru_catalog/catalog/migrations/: 0001_initial.py
autoru_catalog/catalog/templates/: index.html
autoru_catalog/core/: settings.py  urls.py
